<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/size_small"
	android:alpha=".8"
	app:cardBackgroundColor="@color/colorAccent"
	app:cardCornerRadius="@dimen/size_small"
	app:cardElevation="0dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/size_medium">

		<TextView
			android:id="@+id/payoffTitleTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/size_medium"
			android:layout_marginTop="@dimen/size_medium"
			android:text="@string/calculation_result_sum_for_payoff"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/payoffTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/size_medium"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintBottom_toBottomOf="@+id/payoffTitleTextView"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@+id/payoffTitleTextView" />

		<TextView
			android:id="@+id/taxesTitleTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/size_medium"
			android:layout_marginTop="@dimen/size_medium"
			android:text="@string/calculation_result_taxes"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/payoffTitleTextView" />

		<TextView
			android:id="@+id/taxesTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/size_medium"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintBottom_toBottomOf="@+id/taxesTitleTextView"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@+id/taxesTitleTextView" />

		<TextView
			android:id="@+id/otherObligationTitleTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/size_medium"
			android:layout_marginTop="@dimen/size_medium"
			android:text="@string/calculation_result_other_obligation"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/taxesTitleTextView" />

		<TextView
			android:id="@+id/otherObligationTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/size_medium"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintBottom_toBottomOf="@+id/otherObligationTitleTextView"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@+id/otherObligationTitleTextView" />

		<TextView
			android:id="@+id/payoffAfterTaxesTitleTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/size_medium"
			android:layout_marginTop="@dimen/size_medium"
			android:text="@string/calculation_result_sum_after_taxes"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/otherObligationTitleTextView" />

		<TextView
			android:id="@+id/payoffAfterTaxesTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/size_medium"
			android:textColor="@color/textColorWhite"
			android:textSize="@dimen/textsize_medium"
			app:layout_constraintBottom_toBottomOf="@+id/payoffAfterTaxesTitleTextView"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@+id/payoffAfterTaxesTitleTextView" />

	</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>