<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorWhite">

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		android:paddingTop="@dimen/size_xsmall"
		android:paddingBottom="@dimen/grade_rv_padding_bottom">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorGrey">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/size_medium"
					android:paddingTop="@dimen/size_xsmall"
					android:paddingRight="@dimen/size_medium"
					android:paddingBottom="@dimen/size_xsmall"
					android:text="@string/gender_grade_exercise_1"
					android:textColor="@color/textColorPrimary"
					android:textSize="@dimen/textsize_large"
					android:textStyle="bold"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/exercise1reset"
					app:layout_constraintHorizontal_bias="0.0"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintVertical_bias="0.0" />


				<TextView
					android:id="@+id/exercise1reset"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/size_medium"
					android:paddingTop="@dimen/size_xsmall"
					android:paddingRight="@dimen/size_medium"
					android:paddingBottom="@dimen/size_xsmall"
					android:text="@string/menu_clear_button"
					android:textColor="@color/textColorSecondary"
					android:textSize="@dimen/textsize_large"
					android:visibility="gone"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</android.support.constraint.ConstraintLayout>


			<TextView
				android:id="@+id/exercise1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/gender_grade_exercises_choose"
				android:padding="@dimen/size_medium"
				android:textColor="@color/textColorAccent"
				android:textColorHint="@color/textColorSecondary"
				android:textSize="@dimen/textsize_medium" />

			<TextView
				android:id="@+id/exerciseResult1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/gender_grade_result_choose"
				android:padding="@dimen/size_medium"
				android:textColor="@color/textColorAccent"
				android:textColorHint="@color/textColorSecondary"
				android:textSize="@dimen/textsize_medium" />

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorGrey">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/size_medium"
					android:paddingTop="@dimen/size_xsmall"
					android:paddingRight="@dimen/size_medium"
					android:paddingBottom="@dimen/size_xsmall"
					android:text="@string/gender_grade_exercise_2"
					android:textColor="@color/textColorPrimary"
					android:textSize="@dimen/textsize_large"
					android:textStyle="bold"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/exercise2reset"
					app:layout_constraintHorizontal_bias="0.0"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintVertical_bias="0.0" />


				<TextView
					android:id="@+id/exercise2reset"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/size_medium"
					android:paddingTop="@dimen/size_xsmall"
					android:visibility="gone"
					android:paddingRight="@dimen/size_medium"
					android:paddingBottom="@dimen/size_xsmall"
					android:text="@string/menu_clear_button"
					android:textColor="@color/textColorSecondary"
					android:textSize="@dimen/textsize_large"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</android.support.constraint.ConstraintLayout>


			<TextView
				android:id="@+id/exercise2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/gender_grade_exercises_choose"
				android:padding="@dimen/size_medium"
				android:textColor="@color/textColorAccent"
				android:textColorHint="@color/textColorSecondary"
				android:textSize="@dimen/textsize_medium" />

			<TextView
				android:id="@+id/exerciseResult2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/gender_grade_result_choose"
				android:padding="@dimen/size_medium"
				android:textColor="@color/textColorAccent"
				android:textColorHint="@color/textColorSecondary"
				android:textSize="@dimen/textsize_medium" />

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorGrey">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/size_medium"
					android:paddingTop="@dimen/size_xsmall"
					android:paddingRight="@dimen/size_medium"
					android:paddingBottom="@dimen/size_xsmall"
					android:text="@string/gender_grade_exercise_3"
					android:textColor="@color/textColorPrimary"
					android:textSize="@dimen/textsize_large"
					android:textStyle="bold"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/exercise3reset"
					app:layout_constraintHorizontal_bias="0.0"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintVertical_bias="0.0" />


				<TextView
					android:id="@+id/exercise3reset"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/size_medium"
					android:visibility="gone"
					android:paddingTop="@dimen/size_xsmall"
					android:paddingRight="@dimen/size_medium"
					android:paddingBottom="@dimen/size_xsmall"
					android:text="@string/menu_clear_button"
					android:textColor="@color/textColorSecondary"
					android:textSize="@dimen/textsize_large"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</android.support.constraint.ConstraintLayout>

			<TextView
				android:id="@+id/exercise3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/gender_grade_exercises_choose"
				android:padding="@dimen/size_medium"
				android:textColor="@color/textColorAccent"
				android:textColorHint="@color/textColorSecondary"
				android:textSize="@dimen/textsize_medium" />

			<TextView
				android:id="@+id/exerciseResult3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/gender_grade_result_choose"
				android:padding="@dimen/size_medium"
				android:textColor="@color/textColorAccent"
				android:textColorHint="@color/textColorSecondary"
				android:textSize="@dimen/textsize_medium" />

			<LinearLayout
				android:id="@+id/male_part"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/colorGrey">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="@dimen/size_medium"
						android:paddingTop="@dimen/size_xsmall"
						android:paddingRight="@dimen/size_medium"
						android:paddingBottom="@dimen/size_xsmall"
						android:text="@string/gender_grade_exercise_4"
						android:textColor="@color/textColorPrimary"
						android:textSize="@dimen/textsize_large"
						android:textStyle="bold"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/exercise4reset"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintVertical_bias="0.0" />


					<TextView
						android:id="@+id/exercise4reset"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="@dimen/size_medium"
						android:paddingTop="@dimen/size_xsmall"
						android:paddingRight="@dimen/size_medium"
						android:paddingBottom="@dimen/size_xsmall"
						android:text="@string/menu_clear_button"
						android:textColor="@color/textColorSecondary"
						android:visibility="gone"
						android:textSize="@dimen/textsize_large"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

				</android.support.constraint.ConstraintLayout>

				<TextView
					android:id="@+id/exercise4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/gender_grade_exercises_choose"
					android:padding="@dimen/size_medium"
					android:textColor="@color/textColorAccent"
					android:textColorHint="@color/textColorSecondary"
					android:textSize="@dimen/textsize_medium" />

				<TextView
					android:id="@+id/exerciseResult4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/gender_grade_result_choose"
					android:padding="@dimen/size_medium"
					android:textColor="@color/textColorAccent"
					android:textColorHint="@color/textColorSecondary"
					android:textSize="@dimen/textsize_medium" />

				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/colorGrey">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="@dimen/size_medium"
						android:paddingTop="@dimen/size_xsmall"
						android:paddingRight="@dimen/size_medium"
						android:paddingBottom="@dimen/size_xsmall"
						android:text="@string/gender_grade_exercise_5"
						android:textColor="@color/textColorPrimary"
						android:textSize="@dimen/textsize_large"
						android:textStyle="bold"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/exercise5reset"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintVertical_bias="0.0" />


					<TextView
						android:id="@+id/exercise5reset"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="@dimen/size_medium"
						android:paddingTop="@dimen/size_xsmall"
						android:paddingRight="@dimen/size_medium"
						android:paddingBottom="@dimen/size_xsmall"
						android:text="@string/menu_clear_button"
						android:visibility="gone"
						android:textColor="@color/textColorSecondary"
						android:textSize="@dimen/textsize_large"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

				</android.support.constraint.ConstraintLayout>

				<TextView
					android:id="@+id/exercise5"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/gender_grade_exercises_choose"
					android:padding="@dimen/size_medium"
					android:textColor="@color/textColorAccent"
					android:textColorHint="@color/textColorSecondary"
					android:textSize="@dimen/textsize_medium" />

				<TextView
					android:id="@+id/exerciseResult5"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/gender_grade_result_choose"
					android:padding="@dimen/size_medium"
					android:textColor="@color/textColorAccent"
					android:textColorHint="@color/textColorSecondary"
					android:textSize="@dimen/textsize_medium" />
			</LinearLayout>
		</LinearLayout>

	</android.support.v4.widget.NestedScrollView>


	<com.ntechnology.ddinfo.ui.widgets.GenderGradeResultView
		android:id="@+id/gradeResultView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/size_medium"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>